--- a/views/trade.ejs
+++ b/views/trade.ejs
@@ -1,34 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-</head>
+<html>
+<style>
+input[type=text], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  width: 100%;
+  background-color: #f38484;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #F56A6A;
+}
+
+div {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+</style>
 <body>
-    <form action="/trade" method="post">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Enter Stock Name</label>
-          <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Stock name" name="sname">
-        </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Price</label>
-          <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Price" name="price">
-        </div>
-        <div class="form-group">
-            <label for="exampleInputPassword1">Amount</label>
-            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Amount" name="amount">
-          </div>
-          
-        <div class="form-group form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Limit buy/sell</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Buy</button>
-        <button  class="btn btn-primary">Sell</button>
-        
-    </form>
+
+<h3>Stock Purschase Order</h3>
+
+<div>
+  <form action="/trade" method="post">
+    <label for="stock">Select stock</label>
+    <select id="stock" name="stock">
+      <option value="ITC">ITC</option>
+      <option value="BAJFINANCE">BAJFINANCE</option>
+      <option value="BAJAJFINSV">BAJAJFINSV</option>
+      <option value="BPCL">BPCL</option>
+      <option value="ONGC">ONGC</option>
+      <option value="RELIANCE">RELIANCE</option>
+      <option value="POWERGRID">POWERGRID</option>
+      <option value="BAJAJ">BAJAJ</option>
+      <option value="BHARTIARTL">BHARTIARTL</option>
+      <option value="TATACONSUM">TATACONSUM</option>
+      <option value="TCS">TCS</option>
+      
+      
+    </select>
+    <label for="amount">Enter the amount</label>
+    <input type="text" id="amount" name="amount" placeholder="Enter the amount in Stock units" onclick="setstockValue()">
+
+    <label for="lname">Total value in USD($)</label>
+    <input type="text" id="value" name="lastname" value="value goes here" disabled >
+
+    
+  
+    <input type="submit" value="Submit" onclick='swal("Transaction Successful").then(window.loaction("portfolio"))'>
+  </form>
+</div>
+
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script>
+  function setstockValue(amount = document.getElementById('amount').value){
+    document.getElementById('value').value =  parseInt(amount)*(Math.floor(Math.random() * 100) + 1)
+  }
+</script>
+  
 </body>
 </html>
+
+
